<resources>
    <string name="app_name">Gemini Splendor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="api_key">AIzaSyCgwpFm6hqqnWNpXboHprqe2ukH-_ePkOQ</string>
    <string-array name="nav_item_activity_titles">
        <item>Gemini Splender</item>
        <item>Me</item>
        <item>My Project</item>
        <item>My Document</item>
        <item>Installment Status</item>
        <item>Gallery</item>
        <item>My Bank Details</item>
        <item>Contact</item>
        <item>Terms &amp; Conditions</item>
        <item>Privacy Policy</item>
        <item>Project List</item>
        <item>Logout</item>



    </string-array>
    <string-array name="common_page_item_activity_titles">
    <item>Gemini Splender</item>
    <item>Project List</item>
    <item>Photos</item>
    <item>Contact</item>
    <item>Terms &amp; Conditions</item>
    <item>Privacy Policy</item>
    </string-array>
    <string-array name="realtor_nav_item_activity_titles">
        <item>Gemini Splender</item>
        <item>New Project</item>
        <item>User List</item>
        <item>Project List</item>
        <item>Logout</item>
    </string-array>
    <string name="thoughtinteract"><b><font color='black'>thought</font><font color='yellow'>Interact</font></b></string>
    <string name="PriceRs">Price \u20B9 :</string>
    <string name="Rupee">\u20B9</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="realator_logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="realtor_home">Home</string>
    <string name="new_project">New project</string>
    <string name="user_list">User List</string>
    <string name="Number">Number</string>
    <string name="flatListItems">flatListItems</string>
    <string name="project_list">Project List</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="facebook_app_id">1095526427168525</string>
    <string name="fb_login_protocol_scheme">fb1095526427168525</string>
    <string name="attention">This legal notice applies to the entire contents of this website under the domain name geminisplendor.com . The Website is owned and operated by Gemini group whose registered address is 609 610, Sobha Sapphire, Business Bay, PO box 114536, Dubai, UAE  Please read the privacy policy below carefully before using thisWebsite. By using or registering on this Website you accept and agree to the terms of this privacy policy. If you do not accept these terms, do not use this Website.  This policy together with our terms of use and any other document referred to in it sets out the basis on which any personal data we collect from you, or that you provide to us, will be processed by us. Please read the following carefully to understand our views and practices regarding your personal data. Gemini splendor is committed to preserving the privacy of all visitors to its Website and to providing a safe and secure online environment for accessing and viewing the content of the Website. </string>
    <string name="second">1.1 When you request information from us through the Website and/or if you register on the Website, you will be asked to provide certain personal information. We require details such as your first and last name, mobile number, e-mail address, nationality, address and country of residence. You may provide further information to us in any request or in any future correspondence. </string>
    <string name="third">1.2 We also collect technical information about you with respect to your use of the Website through the use of cookies. For more information on the use of cookies by the Website, please see paragraph 4 below entitled “Cookies”.</string>
    <string name="fourth">2 Use of your information </string>
    <string name="fifth">2.1 Your personal information is required so that we can provide you with further information relating to the properties promoted on the Website and to supply any information and/or services you have requested. It will also enable us to contact you, where necessary, concerning your use of the Website. We will also use and analyse the information we collect so that we can administer, support, improve and develop our business. </string>
    <string name="sixth">2.2 We may use your personal information to send you information about the goods and services offered (including any important changes or developments) by us or our affiliates from time to time. If you would rather not receive such communications from us please inform us by e-mail at info@geminigroup.co</string>
    <string name="seventh">2.3 We may communicate with you directly through the Website, or by e-mail, post, fax, or by calling you, unless you have registered with a mail preference service to indicate that you do not wish to receive communications in this manner. If you wish to change the manner in which we communicate with you or you would rather not receive further communications from us, please inform us by e-mail at info@geminigroup.co</string>
    <string name="eight">2.4 By using the Website, you consent to the processing of your personal data in the manner set out in this privacy policy.</string>
    <string name="Remember_me"> Remember me</string>

</resources>