<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@mipmap/home"
            android:title="@string/realtor_home" />
        <item
            android:id="@+id/nav_new_project"
            android:icon="@mipmap/myproject"
            android:title="@string/new_project" />
        <item
            android:id="@+id/nav_user_list"
            android:icon="@mipmap/userlist1"
            android:title="@string/user_list" />
        <item
            android:id="@+id/nav_project_list"
            android:icon="@mipmap/myproject"
            android:title="@string/project_list" />
        <item
            android:id="@+id/realator_logout"
            android:icon="@mipmap/logout"
            android:title="@string/realator_logout" />


    </group>


</menu>